syntax = "proto3";

option csharp_namespace = "GrpcAgent";

package GrpcAgent;

service Publisher {
  rpc PublishMessage (PublishRequest) returns (PublishReply);
}

message PublishRequest {
  string id = 1;
  string category = 2;
  string location = 3;
  string data = 4;
}

message PublishReply {
  int32 statusCode = 1;
}
